--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,39 +18,19 @@ services:
     restart: always
     image: redis:latest
     environment:
-      REDIS_PASSWORD:
+      REDIS_PASSWORD: ""
       REDIS_PORT: 6379
       REDIS_DATABASE: 0
     ports:
-        - "6378:6379"  
+        - "6379:6379"  
     
   web:
     build: .
-    env_file:
-      - .env
     ports:
       - "8080:8080"
     depends_on:
       - postgres
       - redis
-    environment:
-      - SERVER_HOST=127.0.0.1
-      - SERVER_PORT=8080
-
-      - PG_HOST=127.0.0.1
-      - PG_PORT=5433
-      - PG_USER=postgres
-      - PG_PASSWORD=postgres
-      - PG_BASE=postgres
-      - PG_SSL_MODE=disable
-
-      - REDIS_HOST=127.0.0.1
-      - REDIS_PORT=6378
-      - REDIS_DB=0
-
-      - USER_PASSWORD_SALT=salt
-
-      - TOKENS_SIGNING_KEY=secret
-
-      - ACCESS_TOKEN_TTL=10
-      - REFRESH_TOKEN_TTL=2592000=value
+    links:
+      - postgres:db1
+      - redis:db2
